[package]
name = "asphyxia"
version = "0.5.0"
edition = "2024"
authors = [
    "Mikhail Savin <jtprogru@gmail.com>"
]
description = "A fast and efficient network scanner written in Rust"
license = "MIT"
repository = "https://github.com/jtprogru/asphyxia"
homepage = "https://github.com/jtprogru/asphyxia"
readme = "README.md"
keywords = ["network", "scanner", "port", "cli", "security"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.88"
exclude = [".github/", ".gitignore"]

[dependencies]
clap = { version="4.5.40", features = ["derive"] }
rayon = "1.10.0"
indicatif = "0.17.11"
owo-colors = "4.2.1"
ipnetwork = "0.20.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
